--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="{{ static('dist/build.js') }}" type="module"></script>
 
-		<title>PROJECT_NAME</title>
+		<title>{%PROJECT_NAME%}</title>
 	</head>
 	<body>
 		<div id="app"></div>
